modules/noosphere/taghmata/nixidy/manifests/prod/garage-ui/Deployment-garage-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: garage-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: garage-ui
    app.kubernetes.io/version: v0.13.0
    helm.sh/chart: garage-ui-0.13.0
  name: garage-ui
  namespace: garage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: garage-ui
      app.kubernetes.io/name: garage-ui
  template:
    metadata:
      annotations:
        checksum/config: 97ee95132e8d80479a3fdbc225a45e38730cbe9137420fc95d14da48a85543d6
      labels:
        app.kubernetes.io/instance: garage-ui
        app.kubernetes.io/name: garage-ui
    spec:
      containers:
        - env:
            - name: GARAGE_UI_AUTH_JWT_PRIVATE_KEY
              valueFrom:
                secretKeyRef:
                  key: jwt-key.pem
                  name: garage-ui-jwt-token-secret
            - name: GARAGE_UI_AUTH_OIDC_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: client-id
                  name: garage-ui-oidc-secret
            - name: GARAGE_UI_GARAGE_ADMIN_TOKEN
              valueFrom:
                secretKeyRef:
                  key: admin-token
                  name: garage-ui-admin-token
            - name: GARAGE_UI_AUTH_OIDC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: client-secret
                  name: garage-ui-oidc-secret
          image: noooste/garage-ui:v0.13.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
          name: garage-ui
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          volumeMounts:
            - mountPath: /app/config.yaml
              name: config
              readOnly: true
              subPath: config.yaml
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - configMap:
            name: garage-ui-config
          name: config
