modules/noosphere/taghmata/nixidy/manifests/prod/garage-ui/Ingress-garage-ui-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: storage
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Distributed S3 Storage
    glance/icon: di:garage
    glance/id: garage
    glance/name: Garage
    glance/parent: garage
    glance/url: https://ui.garage.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: garage-ui-ip-root
  namespace: garage
spec:
  ingressClassName: traefik
  rules:
    - host: ui.garage.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: garage-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ui.garage.noosphere.uk
      secretName: garage-ui-tls
